      This does not apply to the deprecated versions of these methods.

    - Replaced pageLabel with page_labels.  The option syntax is slightly
      different (pass options as a hash instead of a hashref; remove hyphens
      from option names).

    - Created a convenience method $pdf->image, which combines image_jpeg,
      image_tiff, image_pnm, image_png, image_gif, and image_gd.

    - Created a convenience method $pdf->font, which combines corefont, ttfont,
      psfont, and bdfont.  Unlike corefont, font requires the exact name of one
      of the standard fonts.  Kerning is on by default (vs. off by default in
      the type-specific methods).

    - Renamed synfont to synthetic_font.  Renamed and documented the options.
      The new hscale option (formerly -slant) now takes a percentage (100 = no
      change, vs. 1 = no change for -slant) to match the hscale method in
      Content.  The new "bold" option is in thousandths of a text unit,
      vs. hundredths for "-bold", so multiply the old value by 10 when
      migrating.

    - Renamed $content->advancewidth() to $content->text_width().

    - In PDF::API2::Content, replaced image and formimage with place.  Added a
      $page->place() convenience method that is equivalent to $page->gfx->place.

    - Tentatively deprecated $pdf->cjkfont.  If you're successfully using this
      method for CJK font support, read PDF::API2::Resource::CIDFont::CJKFont
      and contact me to discuss your use case.

    - Tentatively deprecated $pdf->unifont.  If you're successfully using this
      method for Unicode support, please contact me to discuss your use case.

    - Replaced $pdf->preferences() with separate page_mode, page_layout,
      viewer_preferences, and open_action methods, all of which are now fully
      documented.

    - Added font_path and set_font_path accessors for the font search path (the
      list of directories searched when a font name is included without its full